--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,8 +20,6 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
 
     - name: Download Model Assets
       run: |
@@ -30,8 +28,13 @@ jobs:
         curl -L -o app/src/main/assets/voices.json https://huggingface.co/hexgrad/Kokoro-82M/resolve/main/voices.json
         curl -L -o app/src/main/assets/config.json https://huggingface.co/hexgrad/Kokoro-82M/resolve/main/config.json
 
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-version: '8.5'
+
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
