--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "main", "master" ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,7 +38,9 @@ jobs:
         gradle-version: '8.5'
 
     - name: Build with Gradle
-      run: gradle assembleDebug
+      run: |
+        gradle clean
+        gradle assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
